--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.30.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@sanity/icons": "^3.7.4",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^4.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
@@ -16,10 +21,13 @@
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.539.0",
     "next": "15.4.4",
+    "next-sanity": "^10.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0-rc.2",
+    "sanity": "^4.3.0",
+    "styled-components": "^6.1.19",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1"
   },
