--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "lucide-react": "^0.539.0",
     "next": "15.4.4",
     "next-sanity": "^10.0.10",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0-rc.2",
     "sanity": "^4.3.0",
+    "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1"
